--- a/src/app/admin/product-image/list-image/list-image.component.html
+++ b/src/app/admin/product-image/list-image/list-image.component.html
@@ -1,34 +1,20 @@
-<!-- <div class="main-content">
+<div class="main-content">
   <header>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" aria-expanded="true">
-          <img
-            src=""
-            class="img-circle elevation-1"
-            alt="Image"
-            width="35"
-            height="35px"
-            style="margin-top: -5px; border-radius: 50%"
-          />
+          <img src="" class="img-circle elevation-1" alt="Image" width="35" height="35px"
+            style="margin-top: -5px; border-radius: 50%" />
           <span>@Session["Admin_Name"]</span>
         </a>
 
-        <div
-          class="dropdown-menu dropdown-menu-lg dropdown-menu-right"
-          style="min-width: 200px; font-size: 15px; left: inherit; right: 0px"
-        >
-          <span
-            class="dropdown-item dropdown-header font-weight-bold text-drank d-block"
-            >Quản trị viên</span
-          >
+        <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right"
+          style="min-width: 200px; font-size: 15px; left: inherit; right: 0px">
+          <span class="dropdown-item dropdown-header font-weight-bold text-drank d-block">Quản trị viên</span>
           <div class="dropdown-divider"></div>
 
           <div class="dropdown-divider"></div>
-          <a
-            routerLink="/Admin/Logout"
-            class="dropdown-item dropdown-footer text-left"
-          >
+          <a routerLink="/Admin/Logout" class="dropdown-item dropdown-footer text-left">
             <i class="fas fa-sign-out-alt mr-2"></i>Đăng xuất
           </a>
         </div>
@@ -39,114 +25,82 @@
   <main>
     <div class="card">
       <div class="card-header d-flex justify-content-between">
-        <h5 class="h5-title" style="margin: 8px 20px">Danh sach sản phẩm</h5>
+        <h5 class="h5-title" style="margin: 8px 20px">Quản lý sản phẩm</h5>
         <div class="button" style="margin: 8px 20px">
-          <a
-            [routerLink]="['/admin/product/add']"
-            class="btn btn-primary btn-sm mr-2"
-            style="padding: 4px 8px"
-          >
-            <i class="fa-sharp fa-solid fa-plus" style="font-size: 12px"></i>
+          <button class="btn btn-primary btn-sm mr-2" data-toggle="modal" data-target="#exampleModalCenter"
+            style="padding: 4px 8px;">
+            <i class="fa-sharp fa-solid fa-plus" style="font-size: 12px;"></i>
             Thêm mới
-          </a>
-          <a
-            [routerLink]="['/admin/product/trash']"
-            class="btn btn-danger btn-sm"
-            style="padding: 4px 8px"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              style="fill: #fff"
-              height="1em"
-              viewBox="0 0 448 512"
-            >
+          </button>
+          <a [routerLink]="['/admin/product/index']" class="btn btn-danger btn-sm" style="padding: 4px 8px;">
+            <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 512 512">
               <path
-                d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
-              />
+                d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z" />
             </svg>
-            Thùng rác
+            Quay lại
           </a>
         </div>
       </div>
-      <div class="card-body flex-column" style="width: 100%">
-        <table
-          class="table table-bordered table-striped mt-3"
-          id="datatableexample"
-        >
+      <div class="card-body flex-column">
+        <table class="table table-bordered table-striped mt-3" id="myTable">
           <thead>
             <tr>
-              <th>Ten san pham</th>
-              <th>Tên danh mục</th>
-              <th>Gia</th>
+              <th>ID</th>
+              <th>Hình ảnh</th>
+              <th>Tên sản phẩm</th>
               <th>Hoạt động</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let product of listProduct">
+            <tr *ngFor="let image of listImage">
+              <td>{{image.id}}</td>
+              <td><img src="../../../../assets/product-images/{{image.name}}" alt="" class="img-product"></td>
+              <td>{{image.name}}</td>
               <td>
-                <a
-                  [routerLink]="['/admin/product/detail', product.productId]"
-                  >{{ product.productName }}</a
-                >
-                {{product.productName}}
-              </td>
-              <td>{{ product.categoryName }}</td>
-              <td>{{ product.productPrice }}</td>
-              <td>
-                <label class="switch">
-                  <input
-                    class="changeStatus"
-                    (click)="changeActive(product.productId)"
-                    type="checkbox"
-                    *ngIf="product.isActive == 1; else falseCheck"
-                    checked
-                  />
-                  <ng-template #falseCheck>
-                    <input
-                      class="changeStatus"
-                      (click)="changeActive(product.productId)"
-                      type="checkbox"
-                    />
-                  </ng-template>
-                  <span class="slider round"></span>
-                </label>
-                <a
-                  [routerLink]="['/admin/product/edit', product.productId]"
-                  class="btn btn-warning"
-                  style="color: #fff; margin: 0 4px; padding: 4px 8px"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    style="fill: #fff"
-                    height="1em"
-                    viewBox="0 0 512 512"
-                  >
+                <button class="btn btn-danger" style="color: #fff; margin: 0 4px; padding: 4px 8px;">
+                  <svg xmlns="http://www.w3.org/2000/svg" style="fill: #fff;" height="1em" viewBox="0 0 448 512">
                     <path
-                      d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
-                    />
-                  </svg>
-                </a>
-                <button
-                  (click)="delTrashProduct(product.productId)"
-                  class="btn btn-danger"
-                  style="color: #fff; margin: 0 4px; padding: 4px 8px"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    style="fill: #fff"
-                    height="1em"
-                    viewBox="0 0 448 512"
-                  >
-                    <path
-                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
-                    />
+                      d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
                   </svg>
                 </button>
               </td>
             </tr>
           </tbody>
         </table>
+
+      </div>
+    </div>
+
+    <!-- Modal (Pop-up) -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document" style="margin: auto;">
+        <div class="modal-content" style=" padding: 40px;">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Các ảnh liên quan</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label class="mb-2 font-weight-bold" for="">Chọn ảnh</label>
+                <div class="">
+                  <input class="control-label" type="file" value="" (change)="onChange($event)" multiple accept="image/*">
+                  <span class="field-validation-valid text-danger" data-valmsg-for="Image"
+                    data-valmsg-replace="true"></span>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal" style="padding: 4px 8px;">Thoát</button>
+            <button type="button" class="btn btn-primary" style="padding: 4px 8px;">Lưu</button>
+          </div>
+        </div>
       </div>
     </div>
   </main>
-</div> -->
+
+</div>
